[package]
name = "ferrumtty-client"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "ferrumtty"
path = "src/main.rs"

[dependencies]
crossterm.workspace = true
ferrumtty-crypto = { version = "=0.0.0", path = "../ferrumtty-crypto" }
ferrumtty-predict = { version = "=0.0.0", path = "../ferrumtty-predict" }
ferrumtty-runtime = { version = "=0.0.0", path = "../ferrumtty-runtime" }
ferrumtty-terminal = { version = "=0.0.0", path = "../ferrumtty-terminal" }
signal-hook.workspace = true
zeroize.workspace = true

[lints]
workspace = true
