[package]
name = "ferrumtty-state"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
ferrumtty-wire = { version = "=0.0.0", path = "../ferrumtty-wire" }
vt100.workspace = true
vte.workspace = true

[lints]
workspace = true
